[package]
name = "c4a-rust-analyst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
dotenv = "0.15.0"
eyre = "0.6.8"
regex = "1.8.4"
reqwest = { version = "0.11.18", features = ["json"] }
scraper = "0.16.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
tokio = { version = "1.28.2", features = ["full"] }
